# April-Agent

./: .copilotignore  LICENSE  README.md  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
.github/: copilot-instructions.md
docs/: memory-system-review.md
examples/: minimal-run.mjs
src/: __init__.py  agent.py  index.ts  retry.py
src/april_agent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/cli/: minimal-cli.ts  pi-tui-cli.ts  pi-tui-state.ts  pi-tui-support.ts  render-output.ts
src/config/: index.ts  memory-extraction.config.ts  summary-model.config.ts
src/engine/: agent-engine.ts  context-manager.ts  engine-pool.ts  errors.ts  intervention-queue.ts  observability.ts  state-machine.ts
src/knowledge/: local-markdown-store.ts  orchestrator.ts
src/llm/: deepseek-tokenizer.ts  deepseek.ts  provider.ts
tests/: __init__.py  bash-tool.spec.ts  cache.test.ts  cleanup.test.ts  compressor.test.ts  context-manager.spec.ts  engine-pool.spec.ts  engine.spec.ts  file-tools.spec.ts  integration.spec.ts  knowledge.test.ts  memory.spec.ts  minimal-cli-render.spec.ts  observability.spec.ts  pi-tui-state.spec.ts  pi-tui-support.spec.ts  policy-engine.spec.ts  projectContext.test.ts  provider.spec.ts  recall.test.ts  runtime.spec.ts  search-tools.spec.ts  shell-executor.spec.ts  state-machine.spec.ts  storage.spec.ts  test_agent.py  test_cache.py  test_cleanup.py  test_compressor.py  test_knowledge.py  test_project_context.py  test_recall.py  test_retry.py  test_token_budget.py  tokenBudget.test.ts  tools.spec.ts
(+41 files in other folders)
